--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
       <nav>
         <div class="personal__logo">Parker Wheeldon</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
               href="#languages"
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              class="nav__link--anchor
+               link__hover-effect 
+               link__hover-effect--black"
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
               href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li>
-            <a href="#contact" class="nav__link--anchor nav__link--anchor-primary"
+          <li class="nav__link">
+            <a href="mailto:pgwheeldon@gmail.com" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
           </li>
@@ -42,7 +44,7 @@
             />
             </figure>
             <h1 class="about-me__info--title">
-            Hey! I'm <span class="text--purple">Parker Wheeldon</span>👋
+            Hey! I'm <span class="text--purple">Parker Wheeldon</span>&nbsp<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
             Hey there! I'm a new
@@ -52,11 +54,12 @@
             out there, and I'm excited to help write it!
             </p>
             <div class="about-me__links">
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-tiktok"></i>
+            <a href="" class="about-me__link"><i class="fa-brands fa-github"></i></a>
+            <a href="" class="about-me__link"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="" class="about-me__link"><i class="fa-brands fa-facebook"></i></a>
+            <a href="" class="about-me__link"><i class="fa-brands fa-instagram"></i></a>
+            <a href="" class="about-me__link"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="./assets/example resume.pdf" class="about-me__link" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
             </div>
           </div>
           <figure class="about-me__image--container">
@@ -68,7 +71,7 @@
     <section id="languages">
       <div class="container">
         <div class="row">
-          <h1 class="section__title">This is my technology stack</h1>
+          <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
           <div class="language__list">
             <div class="language">
               <figure class="language__img--wrapper">
@@ -122,5 +125,97 @@
         </div>
       </div>
     </section>
+    <section id="projects">
+      <div class="container"> 
+        <div class="row">
+          <h2 class="section__title">Here is a sampling of my <span class="text--purple">projects</span>.</h2>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loopit.png" alt="" class="project__img">
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
+                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="yourwebsite.com" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loopit.png" alt="" class="project__img">
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
+                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="yourwebsite.com" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./assets/loopit.png" alt="" class="project__img">
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
+                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="yourwebsite.com" class="project__description--link">
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/parker logo.png" class="footer__logo--img" alt="Parker's Logo">
+          </figure>
+          <span class="footer__logo--popper">
+            Top
+          <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--links">
+          <a href=""
+          class="footer__social--link
+          link__hover-effect
+          link__hover-effect--white" target="_blank">GitHub</a>
+          <a href=""
+          class="footer__social--link
+          link__hover-effect
+          link__hover-effect--white" target="_blank">LinkedIn</a>
+          <a href="mailto:pgwheeldon@gmail.com"
+          class="footer__social--link
+          link__hover-effect
+          link__hover-effect--white" target="_blank">Email</a>
+          <a href="./assets/example resume"
+          class="footer__social--link
+          link__hover-effect
+          link__hover-effect--white" target="_blank" download>Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright ©️ 2025 Parker Wheeldon</div>
+      </div>
+    </footer>
   </body>
 </html>
