--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parker Wheeldon E-Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/bf8ec59227.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/bf8ec59227.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="about-me">
@@ -15,9 +18,7 @@
           <li class="nav__link">
             <a
               href="#languages"
-              class="nav__link--anchor
-               link__hover-effect 
-               link__hover-effect--black"
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
@@ -29,7 +30,9 @@
             >
           </li>
           <li class="nav__link">
-            <a href="mailto:pgwheeldon@gmail.com" class="nav__link--anchor nav__link--anchor-primary"
+            <a
+              href="mailto:pgwheeldon@gmail.com"
+              class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
           </li>
@@ -39,31 +42,56 @@
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-             <img
-              src="./assets/me.jpg" class="about-me__picture" alt="Picture of Parker Wheeldon"
-            />
+              <img
+                src="./assets/me.jpg"
+                class="about-me__picture"
+                alt="Picture of Parker Wheeldon"
+              />
             </figure>
             <h1 class="about-me__info--title">
-            Hey! I'm <span class="text--purple">Parker Wheeldon</span>&nbsp<span class="wave">👋</span>
+              Hey! I'm
+              <span class="text--purple">Parker Wheeldon</span>&nbsp<span
+                class="wave"
+                >👋</span
+              >
             </h1>
             <p class="about-me__info--para">
-            Hey there! I'm a new
-            <strong class="text--purple">frontend software engineer</strong>. I
-            love the puzzle of finding and fixing a bug, or developing a whole
-            new page targeted toward a smooth user experience! It's a new world
-            out there, and I'm excited to help write it!
+              Hey there! I'm a new
+              <strong class="text--purple">frontend software engineer</strong>.
+              I love the puzzle of finding and fixing a bug, or developing a
+              whole new page targeted toward a smooth user experience! It's a
+              new world out there, and I'm excited to help write it!
             </p>
             <div class="about-me__links">
-            <a href="" class="about-me__link"><i class="fa-brands fa-github"></i></a>
-            <a href="" class="about-me__link"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="" class="about-me__link"><i class="fa-brands fa-facebook"></i></a>
-            <a href="" class="about-me__link"><i class="fa-brands fa-instagram"></i></a>
-            <a href="" class="about-me__link"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="./assets/example resume.pdf" class="about-me__link" target="_blank"><i class="fa-solid fa-file-pdf"></i></a>
+              <a href="" class="about-me__link"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <a href="" class="about-me__link"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="" class="about-me__link"
+                ><i class="fa-brands fa-facebook"></i
+              ></a>
+              <a href="" class="about-me__link"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+              <a href="" class="about-me__link"
+                ><i class="fa-brands fa-tiktok"></i
+              ></a>
+              <a
+                href="./assets/example resume.pdf"
+                class="about-me__link"
+                target="_blank"
+                ><i class="fa-solid fa-file-pdf"></i
+              ></a>
             </div>
           </div>
           <figure class="about-me__image--container">
-            <img src="./assets/undraw_websites.svg" class="about-me__img" alt="Websites Graphic">
+            <img
+              src="./assets/undraw_websites.svg"
+              class="about-me__img"
+              alt="Websites Graphic"
+            />
           </figure>
         </div>
       </div>
@@ -71,76 +99,67 @@
     <section id="languages">
       <div class="container">
         <div class="row">
-          <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
           <div class="language__list">
             <div class="language">
               <figure class="language__img--wrapper">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" class=" language__img" alt="">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  class="language__img"
+                  alt=""
+                />
               </figure>
               <span class="language__name">HTML</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" class=" language__img" alt="">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  class="language__img"
+                  alt=""
+                />
               </figure>
               <span class="language__name">CSS</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">JavaScript</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">TypeScript</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">Vue</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">Nuxt</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">React</span>
-            </div>
-            <div class="language">
-              <figure class="language__img--wrapper">
-                <img src="https://mobx.js.org/img/mobx.png" class=" language__img" alt="">
-              </figure>
-              <span class="language__name">Mobx</span>
             </div>
           </div>
         </div>
       </div>
     </section>
     <section id="projects">
-      <div class="container"> 
+      <div class="container">
         <div class="row">
-          <h2 class="section__title">Here is a sampling of my <span class="text--purple">projects</span>.</h2>
+          <h2 class="section__title">
+            Here is a sampling of my <span class="text--purple">projects</span>.
+          </h2>
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" alt="" class="project__img">
+                <img src="./assets/loopit.png" alt="" class="project__img" />
                 <div class="project__description">
                   <h3 class="project__description--title">Car Sales Project</h3>
-                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
-                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <h4 class="project__description--sub-title">
+                    Html, VSS, JavaSctipt, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.
+                  </p>
                   <div class="project__description--links">
-                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    <a href="" class="project__description--link"
+                      ><i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="yourwebsite.com" class="project__description--link">
+                    <a
+                      href="yourwebsite.com"
+                      class="project__description--link"
+                    >
                       <i class="fa-brands fa-github"></i>
                     </a>
                   </div>
@@ -149,15 +168,30 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" alt="" class="project__img">
+                <img src="./assets/loopit.png" alt="" class="project__img" />
                 <div class="project__description">
                   <h3 class="project__description--title">Car Sales Project</h3>
-                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
-                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <h4 class="project__description--sub-title">
+                    Html, VSS, JavaSctipt, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.
+                  </p>
                   <div class="project__description--links">
-                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    <a href="" class="project__description--link"
+                      ><i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="yourwebsite.com" class="project__description--link">
+                    <a
+                      href="yourwebsite.com"
+                      class="project__description--link"
+                    >
                       <i class="fa-brands fa-github"></i>
                     </a>
                   </div>
@@ -166,15 +200,30 @@
             </li>
             <li class="project">
               <div class="project__wrapper">
-                <img src="./assets/loopit.png" alt="" class="project__img">
+                <img src="./assets/loopit.png" alt="" class="project__img" />
                 <div class="project__description">
                   <h3 class="project__description--title">Car Sales Project</h3>
-                  <h4 class="project__description--sub-title">Html, VSS, JavaSctipt, Vue, Vuex</h4>
-                  <p class="project__description--para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <h4 class="project__description--sub-title">
+                    Html, VSS, JavaSctipt, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.
+                  </p>
                   <div class="project__description--links">
-                    <a href="" class="project__description--link"><i class="fa-brands fa-github"></i>
+                    <a href="" class="project__description--link"
+                      ><i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="yourwebsite.com" class="project__description--link">
+                    <a
+                      href="yourwebsite.com"
+                      class="project__description--link"
+                    >
                       <i class="fa-brands fa-github"></i>
                     </a>
                   </div>
@@ -189,30 +238,43 @@
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-            <img src="./assets/parker logo.png" class="footer__logo--img" alt="Parker's Logo">
+            <img
+              src="./assets/parker logo.png"
+              class="footer__logo--img"
+              alt="Parker's Logo"
+            />
           </figure>
           <span class="footer__logo--popper">
             Top
-          <i class="fas fa-arrow-up"></i>
+            <i class="fas fa-arrow-up"></i>
           </span>
         </a>
         <div class="footer__social--links">
-          <a href=""
-          class="footer__social--link
-          link__hover-effect
-          link__hover-effect--white" target="_blank">GitHub</a>
-          <a href=""
-          class="footer__social--link
-          link__hover-effect
-          link__hover-effect--white" target="_blank">LinkedIn</a>
-          <a href="mailto:pgwheeldon@gmail.com"
-          class="footer__social--link
-          link__hover-effect
-          link__hover-effect--white" target="_blank">Email</a>
-          <a href="./assets/example resume"
-          class="footer__social--link
-          link__hover-effect
-          link__hover-effect--white" target="_blank" download>Resume</a>
+          <a
+            href=""
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >GitHub</a
+          >
+          <a
+            href=""
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a
+            href="mailto:pgwheeldon@gmail.com"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            >Email</a
+          >
+          <a
+            href="./assets/example resume"
+            class="footer__social--link link__hover-effect link__hover-effect--white"
+            target="_blank"
+            download
+            >Resume</a
+          >
         </div>
         <div class="footer__copyright">Copyright ©️ 2025 Parker Wheeldon</div>
       </div>
